--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <link rel="stylesheet" href="//jscrollpane.kelvinluck.com/style/jquery.jscrollpane.css">
     <style type="text/css">
-      * { margin:0; padding:0; }
-      ul { list-style-type:none; height: auto; max-height: 200px; }
-      ul li { float:left; width:200px; height:225px; margin-left:10px; }
-      ul li:first-child { margin-left:0; }
-      section { width:960px; margin:0 auto; }
+      .scroll { list-style-type:none; height: auto; max-height: 200px; }
+     .scroll li { float:left; width:200px; height:225px; margin-left:10px; }
+     .scroll li:first-child { margin-left:0; }
     </style>
   
     <title>Jquery.jscrollpaneext</title>
