--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <link rel="stylesheet" href="//jscrollpane.kelvinluck.com/style/jquery.jscrollpane.css">
     <style type="text/css">
-      .scroll { list-style-type:none; height: auto; max-height: 200px; }
+      .scroll { list-style:none; height: auto; max-height: 200px; }
      .scroll li { float:left; width:200px; height:225px; margin-left:10px; }
      .scroll li:first-child { margin-left:0; }
     </style>
