--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      #main_content_wrap .scroll { list-style-type:none; height: auto; max-height: 200px; }
      #main_content_wrap .scroll li { float:left; width:200px; height:225px; margin-left:10px; }
      #main_content_wrap .scroll li:first-child { margin-left:0; }
+     #main_content_wrap .scroll li img { width:auto; height:auto; }
     </style>
   
     <title>Jquery.jscrollpaneext</title>
