--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="//jscrollpane.kelvinluck.com/style/jquery.jscrollpane.css">
     <style type="text/css">
      #main_content_wrap .scroll { list-style-type:none; height: auto; max-height: 200px; }
-     #main_content_wrap .scroll li { float:left; width:200px; height:225px; margin-left:10px; }
-     #main_content_wrap .scroll li:first-child { margin-left:0; }
-     #main_content_wrap .scroll li img { width:auto; height:auto; }
+     #main_content_wrap .scroll .item { float:left; width:200px; height:225px; margin-left:10px; }
+     #main_content_wrap .scroll .item:first-child { margin-left:0; }
+     #main_content_wrap .scroll .item img { width:200px; height:200px; }
     </style>
   
     <title>Jquery.jscrollpaneext</title>
