--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <link rel="stylesheet" href="//jscrollpane.kelvinluck.com/style/jquery.jscrollpane.css">
     <style type="text/css">
-     #main_content_wrap .jscroll { list-style-type:none; height: auto; max-height: 200px; }
-     #main_content_wrap .jscroll .item { float:left; width:200px; height:225px; margin-left:10px; }
+     #main_content_wrap .jscroll { list-style-type:none; height: auto; margin:0; padding:0; max-height: 200px; }
+     #main_content_wrap .jscroll .item { float:left; width:200px; height:225px; margin:0 0 0 10px; padding:0; list-style:none; }
      #main_content_wrap .jscroll .item:first-child { margin-left:0; }
-     #main_content_wrap .jscroll .item img { width:200px; height:200px; }
+     #main_content_wrap .jscroll .item img { width:200px; padding:0; margin:0; height:200px; }
     </style>
   
     <title>Jquery.jscrollpaneext</title>
