--- a/sample.html
+++ b/sample.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="//jscrollpane.kelvinluck.com/style/jquery.jscrollpane.css">
   <style type="text/css">
     * { margin:0; padding:0; }
-    ul { list-style-type:none; height: auto; max-height: 200px; }
-    ul li { float:left; width:200px; height:225px; margin-left:10px; }
+    ul { list-style-type:none; }
+    ul li { float:left; width:200px; height:200px; margin-left:10px; }
     ul li:first-child { margin-left:0; }
     section { width:960px; margin:0 auto; }
   </style>
@@ -34,10 +34,7 @@
 
   <script>
     $(function() {
-      $('.jscroll').jScrollPaneExt({
-          showArrows        : true,
-          horizontalScroll  : true
-      });
+      $('.jscroll').jScrollPaneExt();
     });
   </script>
 </body>
