--- a/sample.html
+++ b/sample.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="//jscrollpane.kelvinluck.com/style/jquery.jscrollpane.css">
   <style type="text/css">
     * { margin:0; padding:0; }
-    ul { list-style-type:none; }
+    ul { list-style-type:none; height:216px; }
     ul li { float:left; width:200px; height:200px; margin-left:10px; }
     ul li:first-child { margin-left:0; }
     section { width:960px; margin:0 auto; }
